--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
 				<!-- Résumé : Experience : Events and Media President -->
 				<p>
-					<a target="_blank" href="http://www.ideo.com"><img class="icon" src="img/companies/pristine.jpg"></a><b>Pristine Private School</b>
+					<a target="_blank" href="http://www.pristineschool.com"><img class="icon" src="img/companies/pristine.jpg"></a><b>Pristine Private School</b>
 					<span class="right"><i>2019-2020</i></span><br/>
 					<b>President of Events and Media</b>
 					<span class="right"><i>Dubai, UAE</i></span><br/><br/>
@@ -106,7 +106,7 @@
 				<div class="row">
 					<div class="portfolio-thumb">
 						<div class="popup-gallery">
-							<a href="img/portfolio/Sports Day Invitation.jpg"  title="me"><img src="img/portfolio/Sports Day Invitation Cropped.jpg" ></a>
+							<a href="img/portfolio/Sports Day Invitation.jpg" title="me"><img src="img/portfolio/Sports Day Invitation Cropped.jpg" ></a>
 							<a href="img/portfolio/Ideation 2020 invite.png" style="display:none;" title="ideation"><img src="img/portfolio/Ideation 2020 invite.png" ></a>
 							<a href="img/portfolio/Dance.png" style="display:none;" title="Dance"><img src="img/portfolio/Dance.png" width="0" height="0"></a>
 							<a href="img/portfolio/Scare.png" style="display:none;" title="Scare"><img src="img/portfolio/Scare.png" width="0" height="0"></a>
@@ -117,7 +117,7 @@
 					</div>
 					<div class="portfolio-thumb">
 						<div class="popup-gallery">
-							<a href="img/portfolio/meblu.jpg"  title="me"><img src="img/portfolio/meblu Cropped.jpg" ></a>
+							<a href="img/portfolio/meblu.jpg" title="me"><img src="img/portfolio/meblu Cropped.jpg" ></a>
 							<a href="img/portfolio/PPSPP (1).jpg" style="display:none;" title="Ari"><img src="img/portfolio/PPSPP (1).jpg" ></a>
 							<a href="img/portfolio/PPSPP (3).jpg" style="display:none;" title="Dam"><img src="img/portfolio/PPSPP (3).jpg" width="0" height="0"></a>
 							<a href="img/portfolio/PPSPP (6).jpg" style="display:none;" title="Wal"><img src="img/portfolio/PPSPP (6).jpg" width="0" height="0"></a>
