trying stuff by removing img src

--- a/index.html
+++ b/index.html
@@ -107,10 +107,10 @@
 					<div class="portfolio-thumb">
 						<div class="popup-gallery">
 							<a href="img/portfolio/Sports Day Invitation.jpg" title="me"><img src="img/portfolio/Sports Day Invitation Cropped.jpg" ></a>
-							<a href="img/portfolio/Ideation 2020 invite.png" style="display:none;" title="ideation"><img src="img/portfolio/Ideation 2020 invite.png" ></a>
-							<a href="img/portfolio/Dance.png" style="display:none;" title="Dance"><img src="img/portfolio/Dance.png" width="0" height="0"></a>
-							<a href="img/portfolio/Scare.png" style="display:none;" title="Scare"><img src="img/portfolio/Scare.png" width="0" height="0"></a>
-							<a href="img/portfolio/Main Flyer.png" style="display:none;" title="Scare"><img src="img/portfolio/Main Flyer.png" width="0" height="0"></a>
+							<a href="img/portfolio/Ideation 2020 invite.png" style="display:none;" title="ideation"></a>
+							<a href="img/portfolio/Dance.png" style="display:none;" title="Dance"></a>
+							<a href="img/portfolio/Scare.png" style="display:none;" title="Scare"></a>
+							<a href="img/portfolio/Main Flyer.png" style="display:none;" title="Scare"></a>
 						</div>
 						<p class="description"><b>Design</b>&nbsp;&nbsp; I also made posters and invitations for the events in school.
 							 Which allowed me to practice my typography and further my design skills throughout the years.</p>
@@ -118,16 +118,16 @@
 					<div class="portfolio-thumb">
 						<div class="popup-gallery">
 							<a href="img/portfolio/meblu.jpg" title="me"><img src="img/portfolio/meblu Cropped.jpg" ></a>
-							<a href="img/portfolio/PPSPP (1).jpg" style="display:none;" title="Ari"><img src="img/portfolio/PPSPP (1).jpg" ></a>
-							<a href="img/portfolio/PPSPP (3).jpg" style="display:none;" title="Dam"><img src="img/portfolio/PPSPP (3).jpg" width="0" height="0"></a>
-							<a href="img/portfolio/PPSPP (6).jpg" style="display:none;" title="Wal"><img src="img/portfolio/PPSPP (6).jpg" width="0" height="0"></a>
-							<a href="img/portfolio/PPSPP (8).jpg" style="display:none;" title="Zaa"><img src="img/portfolio/PPSPP (8).jpg" width="0" height="0"></a>
-							<a href="img/portfolio/PPSPP (16).jpg" style="display:none;" title="Sha"><img src="img/portfolio/PPSPP (16).jpg" width="0" height="0"></a>
-							<a href="img/portfolio/PPSPP (17).jpg" style="display:none;" title="Hay"><img src="img/portfolio/PPSPP (17).jpg" width="0" height="0"></a>
-							<a href="img/portfolio/camel.jpg" style="display:none;" title="Camel"><img src="img/portfolio/camel.jpg" width="0" height="0"></a>
-							<a href="img/portfolio/D3 Imran.jpg" style="display:none;" title="Imr"><img src="img/portfolio/D3 Imran.jpg" width="0" height="0"></a>
-							<a href="img/portfolio/D3 Khizar.jpg" style="display:none;" title="Khi"><img src="img/portfolio/D3 Khizar.jpg" width="0" height="0"></a>
-							<a href="img/portfolio/damired.jpg" style="display:none;" title="Dam2"><img src="img/portfolio/damired.jpg" width="0" height="0"></a>
+							<a href="img/portfolio/PPSPP (1).jpg" style="display:none;" title="Ari"></a>
+							<a href="img/portfolio/PPSPP (3).jpg" style="display:none;" title="Dam"></a>
+							<a href="img/portfolio/PPSPP (6).jpg" style="display:none;" title="Wal"></a>
+							<a href="img/portfolio/PPSPP (8).jpg" style="display:none;" title="Zaa"></a>
+							<a href="img/portfolio/PPSPP (16).jpg" style="display:none;" title="Sha"></a>
+							<a href="img/portfolio/PPSPP (17).jpg" style="display:none;" title="Hay"></a>
+							<a href="img/portfolio/camel.jpg" style="display:none;" title="Camel"></a>
+							<a href="img/portfolio/D3 Imran.jpg" style="display:none;" title="Imr"></a>
+							<a href="img/portfolio/D3 Khizar.jpg" style="display:none;" title="Khi"></a>
+							<a href="img/portfolio/damired.jpg" style="display:none;" title="Dam2"></a>
 						</div>
 						<p class="description"><b>Photography</b>&nbsp;&nbsp; On the side a bit of photography is also nice. Taking portraits of people and objects is what I do mostly. 
 							I even took professional portraits for my school's annual Model UN.</p>
