--- a/index.html
+++ b/index.html
@@ -217,6 +217,13 @@
 		    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
 		    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
 		  })();
+
+		$('.gallery-item').magnificPopup({
+  			type: 'image',
+  			gallery:{
+    		enabled:true
+  			}
+		});
 		</script>
 	</body>
 </html>
