--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 		          }
 		        });
 
-		         $('.popup-youtube, .popup-vimeo, .popup-gmaps').magnificPopup({
+		         $('.popup-youtube, .popup-vimeo, .popup-gmaps, .popup_gallery').magnificPopup({
 		          disableOn: 700,
 		          type: 'iframe',
 		          mainClass: 'mfp-fade',
