--- a/index.html
+++ b/index.html
@@ -136,15 +136,9 @@
 				<div class="row">
 					<div class="portfolio-thumb">
 						<a class="image-popup-no-margins" href="img/portfolio/apollo2.png"><img src="img/portfolio/apollo2.png"></a>
-						<p class="description"><b>Apollo</b>&nbsp;&nbsp; An internal summer intern project at IDEO. Apollo is
-						 a searchable community of people tagged with rich psychographic data, curated to provide resolution and reach to companies looking
-						 for research candidates.
+						<p class="description"><b>All the other stuff</b>&nbsp;&nbsp;This shows some certificates that I have received
+							 throughout the years in various events like programming competitions, workshops and mentorship programs.
 						</p>
-					</div>
-					<div class="portfolio-thumb">
-						<a class="image-popup-no-margins" href="img/portfolio/xx_03.png"><img src="img/portfolio/xx_03.png"></a>
-						<p class="description"><b>Music Visualizer</b>&nbsp;&nbsp; Experimental summer
-						project using WebGL and Three.js with a beat detection algorithm to make an interactive 3D music visualization of album artwork using orbit controls. Play <a target="_blank" href="visualizer/xx.html">here</a>.</p>
 					</div>
 				</div>
 				</div>
