added the certificates

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 				</div>
 				<div class="row">
 					<div class="portfolio-thumb">
-						<p class="description"><b>All the other stuff</b>&nbsp;&nbsp;This shows some certificates that I have received
+						<p class="description"><b><a target="_blank" href="adyanehtesham_certificates.pdf">All the other stuff</a></b>&nbsp;&nbsp;This shows some certificates that I have received
 							 throughout the years in various events like programming competitions, workshops and mentorship programs.
 						</p>
 					</div>
