deleted old files, added new ones, put basic design layout, added chat-bot functionality

--- a/index.html
+++ b/index.html
@@ -1,226 +1,30 @@
 <!DOCTYPE html>
- <head>
-	<title>Adyan Ehtesham</title>
-	  	<meta charset="UTF-8">
-		<meta name="description" content="Personal Website">
+<html>
+    <head>
+        <title>Adyan Ehtesham</title>
+        <meta charset="UTF-8">
+        <meta name="description" content="Personal Website">
 		<meta name="keywords" content="Adyan Ehtesham" />
 		<meta name="author" content="Adyan Ehtesham" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0;">
-	  	<link href="css/style.css" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500&display=swap" rel="stylesheet">
-		<link href='http://fonts.googleapis.com/css?family=Rokkitt|Open+Sans:300italic,400italic,600italic,700italic,400,300,600,700' rel='stylesheet' type='text/css'> 
-		<link href='http://fonts.googleapis.com/css?family=Karla:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-		<link href="dist/magnific-popup.css?v=0.9.8" rel="stylesheet" />
-	</head>
-	<body>
-
-		<div id="page-wrapper">
-			<!-- Header -->
-			<div id="header">
-				<div class="inner name"><a href="#illustration">Adyan Ehtesham</a></div>
-			</div>
-			<!-- About -->
-			<div id="about"><div class="inner">
-				<p>Hello, world!</p><br/><br/><br/>
-				<!-- Console -->
-					<div id="code">
-						<div id="console">
-							&gt; adyan.origin<br/>
-							<span class="answer">&nbsp;&nbsp;-&gt; "Dubai, UAE"<br/><br/></span>
-							&gt; adyan.education<br/>
-							<span class="answer">&nbsp;&nbsp;-&gt; "A Levels at Pristine Private School"<br/><br/></span>
-							&gt; adyan.prospectiveMajor<br/>
-							<span class="answer">&nbsp;&nbsp;-&gt; "Computer Science"<br/><br/></span>
-							&gt; adyan.graduation<br/>
-							<span class="answer">&nbsp;&nbsp;-&gt; "June 2020"<br/><br/></span>
-							&gt; adyan.interests<br/>
-							<span class="answer">&nbsp;&nbsp;-&gt; ["Code", "Design", "Data", "Typography", "Music", "Food"]<br/><br/></span>
-							&gt; adyan.resume<br/>
-							<span class="answer">&nbsp;&nbsp;-&gt; "<a target="_blank" href="adyanehtesham.pdf">adyanehtesham.pdf</a>"<br/><br/></span>
-							&gt; adyan.email<br/>
-							<span class="answer">&nbsp;&nbsp;-&gt; "<a target="_blank" href="mailto:adyan.ehtesham@gmail.com">adyan.ehtesham@gmail.com</a>"<br/><br/></span>
-						</div>
-					</div>
-				</div>
-				<br/>
-			</div>
-			<!-- Résumé -->
-			<div id="resume"><div class="inner">
-				<p class="tagline">Résumé</p>
-				<!-- Résumé : Education -->
-				<p class="section-tagline" style="text-align:left;">Education</p>
-				<!-- Résumé : Education : Pristine -->
-				<p>
-					<a target="_blank" href="http://www.pristineschool.com"><img class="icon" src="img/companies/pristine.jpg"></a><b>Pristine Private School</b>
-					<span class="right"><i>2018-2020</i></span><br/><b>GCE A Level</b>
-					<span class="right"><i>Dubai, UAE</i></span><br/><br/>
-						Predicted grades:<br/>
-						<ul style="list-style:circle;">
-									<li>3As in Computer Science, Mathematics and Physics</li>
-								</ul>
-					<span class="skill">Python</span><span class="skill">Data Analysis</span><span class="skill">OOP</span><span class="skill">Low Level Programming</span>
-				</p>
-				<br/>
-				<!-- Résumé : Education : Primus -->
-				<p>
-					<a target="_blank" href="https://primusschool.edu.in/‎"><img class="icon" src="img/companies/primus.png"></a><b>Primus Public School</b>
-					<span class="right"><i>2016-2018</i></span><br/>
-					<b>GCE IGCSE</b>
-					<span class="right"><i>Bangalore, India</i></span><br/><br/>
-					Grades:<br/>
-					<ul style="list-style:circle;">
-						<li>4A*s in ICT, Mathematics, Physics and Biology</li>
-					</ul>
-					<ul style="list-style:circle;">
-						<li>2As in Economics and French</li>
-					</ul>
-					<span class="skill">Français</span><span class="skill">Excel</span><span class="skill">HTML</span>
-				</p><br/>
-				<br/>
-				<!-- Résumé : Experience -->
-				<p class="section-tagline" style="text-align:left;">Experience</p>
-
-				<!-- Résumé : Experience : Events and Media President -->
-				<p>
-					<a target="_blank" href="http://www.pristineschool.com"><img class="icon" src="img/companies/pristine.jpg"></a><b>Pristine Private School</b>
-					<span class="right"><i>2019-2020</i></span><br/>
-					<b>President of Events and Media</b>
-					<span class="right"><i>Dubai, UAE</i></span><br/><br/>
-					Was put in charge of organising and managing school events as well as handling the media involved such as posters, photography and videos. 
-					It involved handling large data as well as using design software. <br/><br/>
-					<span class="skill">Event/Team Management</span><span class="skill">Data Management</span><span class="skill design">Illustrator</span><span class="skill design">Premiere Pro</span>
-				</p>
-				<br/>
-				<br/><br/><br/>
-			</div></div>
-			<!-- Portfolio -->
-			<div id="work"><div class="inner">
-				<p class="tagline">Work + Fun</p>
-
-				<div class="portfolio-thumb portfolio-big">
-					<iframe width="970" height="546" src="https://www.youtube.com/embed/videoseries?list=PLtwhia9IAvLXmxBa5_q9faY52oLzyEuOe" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-					<p class="description"><b>Content Creation</b>&nbsp;&nbsp; As the president of events and media I was in charge of numerous event videos. Above is a playlist for some of them.
-						It includes music videos, event videos and more.
-					</p>
-				</div>
-				<div class="row">
-					<div class="portfolio-thumb">
-						<div class="popup-gallery">
-							<a href="img/portfolio/Sports Day Invitation.jpg" title="me"><img src="img/portfolio/Sports Day Invitation Cropped.jpg" ></a>
-							<a href="img/portfolio/Ideation 2020 invite.png" style="display:none;" title="ideation"></a>
-							<a href="img/portfolio/Dance.png" style="display:none;" title="Dance"></a>
-							<a href="img/portfolio/Scare.png" style="display:none;" title="Scare"></a>
-							<a href="img/portfolio/Main Flyer.png" style="display:none;" title="Scare"></a>
-						</div>
-						<p class="description"><b>Design</b>&nbsp;&nbsp; I also made posters and invitations for the events in school.
-							 Which allowed me to practice my typography and further my design skills throughout the years.</p>
-					</div>
-					<div class="portfolio-thumb">
-						<div class="popup-gallery">
-							<a href="img/portfolio/meblu.jpg" title="me"><img src="img/portfolio/meblu Cropped.jpg" ></a>
-							<a href="img/portfolio/PPSPP (1).jpg" style="display:none;" title="Ari"></a>
-							<a href="img/portfolio/PPSPP (3).jpg" style="display:none;" title="Dam"></a>
-							<a href="img/portfolio/PPSPP (6).jpg" style="display:none;" title="Wal"></a>
-							<a href="img/portfolio/PPSPP (8).jpg" style="display:none;" title="Zaa"></a>
-							<a href="img/portfolio/PPSPP (16).jpg" style="display:none;" title="Sha"></a>
-							<a href="img/portfolio/PPSPP (17).jpg" style="display:none;" title="Hay"></a>
-							<a href="img/portfolio/camel.jpg" style="display:none;" title="Camel"></a>
-							<a href="img/portfolio/D3 Imran.jpg" style="display:none;" title="Imr"></a>
-							<a href="img/portfolio/D3 Khizar.jpg" style="display:none;" title="Khi"></a>
-							<a href="img/portfolio/damired.jpg" style="display:none;" title="Dam2"></a>
-						</div>
-						<p class="description"><b>Photography</b>&nbsp;&nbsp; On the side a bit of photography is also nice. Taking portraits of people and objects is what I do mostly. 
-							I even took professional portraits for my school's annual Model UN.</p>
-					</div>
-				</div>
-				<div class="row">
-					<div class="portfolio-thumb">
-						<p class="description"><b><a target="_blank" href="adyanehtesham_certificates.pdf">All the other stuff</a></b>&nbsp;&nbsp;This shows some certificates that I have received
-							 throughout the years in various events like programming competitions, workshops and mentorship programs.
-						</p>
-					</div>
-				</div>
-				</div>
-			</div></div>
-			<div  id ="footer"><div class="inner">
-				Adyan Ehtesham.
-				<span class="right">
-					<a target="_blank" href="mailto:adyan.ehtesham@gmail.com">Email</a>
-				</span>
-			</div></div>
-		<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-
-		<!-- Magnific Popup core CSS file -->
-		<link rel="stylesheet" href="magnific-popup/magnific-popup.css">
-
-		<!-- jQuery 1.7.2+ or Zepto.js 1.0+ -->
-		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-
-		<!-- Magnific Popup core JS file -->
-		<script src="magnific-popup/jquery.magnific-popup.js"></script>
-
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
-		<script src="js/jquery.fixedTOC.js?v=3.0"></script>
-		<script src="dist/jquery.magnific-popup.js?v=0.9.8"></script>
-		<script type="text/javascript">
-		 $(document).ready(function() {
-		        $('.image-popup-no-margins').magnificPopup({
-		          type: 'image',
-		          closeOnContentClick: true,
-		          closeBtnInside: false,
-		          fixedContentPos: true,
-		          mainClass: 'mfp-no-margins mfp-with-zoom', // Class to remove default margin from left and right side
-		          image: {
-		            verticalFit: true
-		          },
-		          zoom: {
-		            enabled: true,
-		            duration: 300 // Duration variable also in CSS
-		          }
-		        });
-
-		         $('.popup-youtube, .popup-vimeo, .popup-gmaps, .popup_gallery').magnificPopup({
-		          disableOn: 700,
-		          type: 'iframe',
-		          mainClass: 'mfp-fade',
-		          removalDelay: 160,
-		          preloader: false,
-
-		          fixedContentPos: false
-		        });
-
-		        $('.simple-ajax-popup-align-top').magnificPopup({
-		          type: 'ajax',
-		          alignTop: true,
-		          overflowY: 'scroll' // as we know that popup content is tall we set scroll overflow by default to avoid jump
-		        });
-
-		        $('.simple-ajax-popup').magnificPopup({
-				  type: 'ajax'
-
-				$('.image-link').magnificPopup({type:'image'});
-
-		        });
-		      });
-		</script>
-		<script>
-		// call the plugin on the "#toc" element
-		$('#toc').fixedTOC({
-			menuOpens: 'click', // or 'mouseenter'
-			scrollSpeed: 1000,
-			menuSpeed: 300,
-			useSubMenus: false,
-			resetSubMenus: false,
-			topLinkWorks: true
-		});
-		</script>
-		<script>
-		  $('.gallery-item').magnificPopup({
-				type: 'image',
-				gallery:{
-				enabled:true
-				}
-			});
-		</script>
-	</body>
+        <link href="styles/style.css" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="https://static2.sharepointonline.com/files/fabric/office-ui-fabric-core/11.0.0/css/fabric.min.css"/>
+    </head>
+    <body>
+        <div class="menu">
+            <h1 id="title"><a href="index.html">Adyan</a></h1>
+            <br>
+            <h2><a href="code.html">Code</a></h2>
+            <h2><a href="data.html">Data</a></h2>
+            <h2><a href="video.html">Video</a></h2>
+            <h2><a href="photo.html">Photo</a></h2>
+            <br>
+            <h3>Resume</h3>
+            <h3>Contact</h3>
+        </div>
+        <div class="landing-content">
+            <h1 id="landing-name">Adyan Ehtesham</h1>
+            <p id="landing-description"><strong>Computer Science</strong> Student, <strong>Data</strong> Crusader, <strong>Front End</strong> Hobbyist, <strong>Esports</strong> Fanatic, <strong>Automobile</strong> Enthusiast, <strong>Street Photographer</strong>, <strong>Video Editor</strong>, <strong>White Space</strong> Connoisseur, <strong>Open Source</strong> Advocate, <strong>Typography</strong> Devotee</p>
+        </div>
+    </body>
 </html>
