fixed chat appearance, completed photos page

--- a/data.html
+++ b/data.html
@@ -23,6 +23,7 @@
             <h3>Contact</h3>
         </div>
         <div id="contentbg" class="content">
+            <h1 style="position:relative; margin:30%; text-align: center;">Work In Progress</h1>
         </div>
     </body>
 </html>
