--- a/video.html
+++ b/video.html
@@ -19,10 +19,11 @@
             <h2><a href="video.html">Video</a></h2>
             <h2><a href="photo.html">Photo</a></h2>
             <br>
-            <h3>Resume</h3>
+            <h3><a href="resume.html">Resume</a></h3>
             <h3>Contact</h3>
         </div>
         <div id="contentbg" class="content">
+            <h1 style="position:relative; margin:30%; text-align: center;">Work In Progress</h1>
         </div>
     </body>
 </html>
