--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <h2><a href="video.html">Video</a></h2>
             <h2><a href="photo.html">Photo</a></h2>
             <br>
-            <h3>Resume</h3>
+            <h3><a href="resume.html">Resume</a></h3>
             <h3>Contact</h3>
         </div>
         <div class="landing-content">
